--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' && eslint 'tests/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests"
   },
   "husky": {
@@ -51,6 +51,7 @@
     "preact-cli": "^3.0.0",
     "prettier": "^1.19.1",
     "sirv-cli": "^1.0.0-next.3",
+    "ts-node": "^9.0.0",
     "typescript": "^3.7.5"
   }
 }
