--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "build/*"
   ],
   "dependencies": {
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "preact": "^10.3.1",
     "preact-jsx-chai": "^3.0.0",
     "preact-markup": "^2.0.0",
