--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,8 @@
         // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
         "esModuleInterop": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "skipLibCheck": true
     },
     "include": ["src/**/*.tsx", "src/**/*.ts", "tests/**/*.tsx", "tests/**/*.ts"]
 }
