--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
     "lint-staged": "^10.0.7",
+    "node-sass": "^5.0.0",
     "preact-cli": "^3.0.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.1.0",
     "sirv-cli": "^1.0.0-next.3",
     "ts-node": "^9.0.0",
     "typescript": "^3.7.5"
