Change react-boostrap with reactstrap

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,10 @@
         "preact-cli/babel"
     ],
     "plugins": [
-        ["@babel/plugin-transform-react-jsx"],
+        ["@babel/plugin-transform-react-jsx", {
+            "pragma": "h",
+            "pragmaFrag": "Fragment"
+        }],
         ["@babel/plugin-transform-react-jsx-source"]
     ]
 }
